# tiled-heightmap-renderer

./: .pre-commit-config.yaml  README.md  example.py  example_relief_renderer.py  example_relief_renderer_depth.py  example_relief_renderer_height.py  example_tiled_relief_renderer.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-package.yml
heightmap_renderer/: __init__.py  _coordinate_int_2d.py  _tile.py  _tile_renderer.py  relief_renderer.py  simple_renderer.py  tile.py  tile_renderer.py  tiled_relief_renderer.py  utils.py
tests/: conftest.py  test_coordinate_int_2d.py  test_simple_renderer.py
